--- a/app/app.css
+++ b/app/app.css
@@ -1,27 +1,26 @@
 body{
-  background-color: #cfb53b;
+  background-color: #b68f2e;
 }
 .navbar-default{
-  background-color: #002323;
-  color: gray;
+  background-color: #015643;
 }
 .navbar-default a{
-  color: #cfb53b !important;
+  color: #b68f2e !important;
 }
 .tagline{
   text-align: right;
 }
 .main{
-  margin-top: -20px;
-  width: 1000px;
+  margin-top: -1.250em;
+  width: 62.500em;
 }
 .location li{
   list-style: none;
   float: right;
-  margin-top: -30px;
+  margin-top: -1.875em;
 }
 .pic{
-  margin-left: -15px;
+  margin-left: -.938em;
 }
 .list li{
   list-style: none;
@@ -30,7 +29,85 @@ body{
   background-color: white;
 }
 .logo{
-  font-family: cursive;
-  font-size: 25px;
+  margin-top: -1.875em;
+}
+.red{
+  color: #ed2024;
+}
+.approved{
+  margin-left: 9.375em;
+  margin-top: -6.250em;
+}
+* {box-sizing:border-box}
+body {font-family: Verdana,sans-serif;}
+.mySlides {display:none}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 62.500em;
+  position: relative;
+  margin: auto;
+}
+/*slideshow content*/
+/* Caption text */
+.text {
+  color: black;
   font-weight: bold;
+  font-size: 1.250em;
+  padding: .500em .750em;
+  position: absolute;
+  bottom: .500em;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: .750em;
+  padding: .500em .750em;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: .813em;
+  width: .813em;
+  margin: 0 .125em;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+.slideshowView{
+  width: 19.844em;
+  height: 29.859em;
+}
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 5.0s;
+  animation-name: fade;
+  animation-duration: 5.0s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 18.750em) {
+  .text {font-size: .688em}
 }
